--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.109.2
 uvicorn[standard]==0.27.1
+gunicorn==21.2.0
 anthropic>=0.40.0
 qdrant-client==1.7.3
 sentence-transformers==2.3.1
@@ -9,3 +10,4 @@ python-multipart==0.0.9
 google-generativeai>=0.3.2
 openai>=1.12.0
 cohere>=5.0.0
+python-dotenv==1.0.1
